# nft-ticketing-webapp

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json
backend_programs/: Anchor.toml
backend_programs/programs/backend_programs/: Cargo.toml
backend_programs/programs/backend_programs/src/: lib.rs
backend_programs/tests/: backend_programs.ts
frontend/: README.md  index.html
frontend/src/: App.tsx
frontend/src/comp/: Footer.tsx  Header.tsx  Main.tsx
programs/nft_webapp/: Cargo.toml
programs/nft_webapp/src/: lib.rs
sh/: l-to-d.sh
tests/: nft_webapp.ts
